# daedalus-agent

./: .dockerignore  .env.template  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .replit  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  COLORS.md  CONTRIBUTING.md  LICENSE  LLM.md  Makefile  README.md  SECURITY.md  compare_yaml_keys.py  custom-values.yaml  deploy.sh  docker-compose.yaml  helm-build-deploy.sh  how-to-see.md  ignore.json  ignore.md  merge_yaml_configs.py  nginx-timeout-config.conf  package-lock.json  replit.md  rss.json  run-eval.sh  start-redis.sh  trigger-autonomous-agent.sh
builder/: .coveragerc  .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  collection_metadata_api.py  conftest.py  document_ingest_api.py  entrypoint.py  image_api.py  llm_diagnostics.py  mcp_patches.py  milvus_collection_migration.py  profile_import_api.py  pylock.runtime-linux-amd64.toml  pylock.runtime-linux-arm64.toml  pyproject.toml  pytest.ini  requirements-runtime-overrides.in  requirements-runtime.in  runtime_contract_check.py  verify_uv_pip_check.py
builder/agent_skills/: pyproject.toml
builder/agent_skills/src/agent_skills/: agent_skills_function.py  register.py  skill_parser.py
builder/artificial_analysis/: README.md  pyproject.toml
builder/artificial_analysis/src/artificial_analysis/: artificial_analysis_function.py  register.py
builder/automated_description_generation/: pyproject.toml
builder/automated_description_generation/src/nat_automated_description_generation/: register.py
builder/automated_description_generation/tests/: test_auto_desc_generation.py
builder/autonomous_agent/: pyproject.toml
builder/autonomous_agent/src/autonomous_agent/: __init__.py  backend_client.py  dedupe.py  models.py  prompt.py  store.py  worker.py
builder/content_distiller/: pyproject.toml
builder/content_distiller/src/content_distiller/: content_distiller_function.py  register.py
builder/elsevier_search/: pyproject.toml
builder/elsevier_search/src/elsevier_search/: elsevier_search_function.py  register.py
builder/image_augmentation/: README.md  flux-kontext.openapi.yaml  pyproject.toml  setup.py
builder/image_augmentation/src/image_augmentation/: image_augmentation_function.py  register.py
builder/image_comprehension/: README.md  pyproject.toml
builder/image_comprehension/src/image_comprehension/: image_comprehension_function.py  register.py
builder/image_generation/: README.md  configs  data  flux-schnell.openapi.yaml  pyproject.toml  sd-3.5.openapi.yaml
builder/image_generation/src/image_generation/: image_generation_function.py  register.py  visual_media_function.py
builder/json_repair_agent/: pyproject.toml
builder/json_repair_agent/src/json_repair_agent/: identity_propagation.py  json_repair.py  register.py  resilient_agent.py  resilient_agent_register.py
builder/llm_sandbox/: pyproject.toml
builder/llm_sandbox/src/llm_sandbox/: __init__.py  llm_sandbox_function.py  register.py
builder/mas_optimizer/: pyproject.toml  towards-a-science-of-scaling-agent-systems.md
builder/mas_optimizer/src/mas_optimizer/: capability_gate.py  mas_optimizer_function.py  register.py  task_analyzer.py
builder/nat_helpers/: pyproject.toml  setup.py
builder/nat_helpers/src/nat_helpers/: daedalus_memory_tools.py  front_end.py  geolocation.py  idempotency.py  identity.py  image_utils.py  internal_auth.py  nvidia_docs.py  openai_images.py  per_user_tool_calling.py  redis_url.py  register.py  result_scraper.py  safe_http.py  secure_redis_memory.py  secure_redis_object_store.py  url_guard.py
builder/nat_nv_ingest/: README.md  configs  data  pyproject.toml
builder/nat_nv_ingest/src/nat_nv_ingest/: html_to_markdown_udf.py  nat_nv_ingest.py  register.py  user_document_retriever.py
builder/perplexity_search/: pyproject.toml
builder/perplexity_search/src/perplexity_search/: __init__.py  perplexity_search_function.py  register.py
builder/rss_feed/: README.md  pyproject.toml  setup.py
builder/rss_feed/src/rss_feed/: register.py  rss_feed_function.py
builder/serpapi_ai/: README.md  pyproject.toml  setup.py
builder/serpapi_ai/src/serpapi_ai/: geolocation_helper.py  register.py  serpapi_ai_function.py
builder/serpapi_news/: configs  data  google_openapi_spec.yaml  pyproject.toml  setup.py
builder/serpapi_news/src/serpapi_news/: register.py  result_scraper.py  serpapi_news_function.py
builder/serpapi_search/: README.md  pyproject.toml  setup.py
builder/serpapi_search/src/serpapi_search/: geolocation_helper.py  register.py  result_scraper.py  serpapi_search_function.py
builder/smart_milvus/: README.md  configs  data  pyproject.toml
builder/smart_milvus/src/smart_milvus/: register.py  (+1 more)
builder/source_verifier/: pyproject.toml
builder/tests/: test_agent_skills_function.py  test_artificial_analysis.py  test_async_functions.py  test_autonomous_agent_runner.py  test_autonomous_agent_worker.py  test_autonomous_dedupe.py  test_autonomous_store.py  test_backend_config_contracts.py  test_ci_makefile_parity.py  test_collection_metadata_api.py  test_consolidated_tools.py  test_content_distiller.py  test_daedalus_memory_tools.py  test_document_ingest_api.py  test_entrypoint.py  test_front_end.py  test_geolocation.py  test_idempotency.py  test_image_api.py  test_image_augmentation.py  test_image_comprehension.py  test_image_generation.py  test_image_utils.py  test_integration_redis.py  test_internal_auth_middleware.py  test_json_repair.py  test_llm_diagnostics.py  test_llm_sandbox.py  test_mas_optimizer.py  test_mcp_approval_gate.py  test_mcp_patches.py  test_mcp_preflight.py  test_milvus_collection_migration.py  test_nat_nv_ingest.py  test_nvidia_docs.py  test_openai_images.py  test_operation_filtering.py  test_perplexity_search.py  test_profile_import_api.py  test_redis_url.py  (+17 more)
builder/think_tool/: pyproject.toml
builder/user_interaction/: pyproject.toml
builder/visual_media/: README.md  configs  pyproject.toml
builder/vtt_interpreter/: pyproject.toml
builder/weather/: configs  data  pyproject.toml
builder/webscrape/: configs  data  pyproject.toml
(+863 files in other folders)
