[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "artificial_analysis"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[redis,mcp,langchain,phoenix] @ git+https://github.com/NVIDIA/NeMo-Agent-Toolkit.git@v1.5.0",
  "httpx>=0.28",
]
requires-python = ">=3.11,<3.14"
description = "NeMo Agent Toolkit function for querying the Artificial Analysis API"
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
artificial_analysis = "artificial_analysis.register"

[tool.setuptools]
packages = ["artificial_analysis"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
artificial_analysis = ["configs/*.yml", "configs/*.yaml"]

[tool.uv]
config-settings = { editable_mode = "compat" }
