[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-agent"
version = "0.1.0"
requires-python = ">=3.11"
description = "Daedalus autonomous agent worker"
dependencies = [
    "requests>=2",
]

[tool.setuptools.packages.find]
where = ["src"]
