[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "content_distiller"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[redis,mcp,langchain,phoenix]==1.7.0",
  "langchain-core",
  "pydantic>=2,<2.14",
]
requires-python = ">=3.11,<3.14"
description = "Secondary LLM content distillation for NeMo Agent Toolkit."
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
content_distiller = "content_distiller.register"

[tool.setuptools]
packages = ["content_distiller"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
content_distiller = ["configs/*.yml", "configs/*.yaml"]

[tool.uv]
config-settings = { editable_mode = "compat" }
