[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "image_augmentation"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[redis,mcp,langchain,phoenix] @ git+https://github.com/NVIDIA/NeMo-Agent-Toolkit.git@develop",
  "httpx>=0.28",
  "redis~=4.3.6",
  "Pillow>=10.0"
]
requires-python = ">=3.11,<3.14"
description = "Image augmentation function for NeMo Agent Toolkit"
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
image_augmentation = "image_augmentation.register"

[tool.setuptools]
packages = ["image_augmentation"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
image_augmentation = ["configs/*.yml", "configs/*.yaml"]

[tool.uv]
config-settings = { editable_mode = "compat" }
