[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "json_repair_agent"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[redis,mcp,langchain,phoenix] @ git+https://github.com/NVIDIA/NeMo-Agent-Toolkit.git@develop",
]
requires-python = ">=3.11,<3.14"
description = "Resilient tool-calling agent for NeMo Agent Toolkit — repairs malformed JSON in LLM tool-call arguments."
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
json_repair_agent = "json_repair_agent.register"

[tool.setuptools]
packages = ["json_repair_agent"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
json_repair_agent = ["configs/*.yml", "configs/*.yaml"]

[tool.uv]
config-settings = { editable_mode = "compat" }
