[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "llm_sandbox"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[redis,mcp,langchain,phoenix]==1.7.0",
  "httpx>=0.28",
]
requires-python = ">=3.11,<3.14"
description = "NeMo Agent Toolkit function for the Daedalus LLM sandbox"
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
llm_sandbox = "llm_sandbox.register"

[tool.setuptools]
packages = ["llm_sandbox"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
llm_sandbox = ["configs/*.yml", "configs/*.yaml"]

[tool.uv]
config-settings = { editable_mode = "compat" }
