[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "mas_optimizer"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[redis,mcp,langchain,phoenix,async_endpoints]==1.6.0-dev",
]
requires-python = ">=3.11,<3.14"
description = "MAS-optimized architecture selector for NeMo Agent Toolkit — capability gating, task decomposability analysis, and verifier stage per 'Towards a Science of Scaling Agent Systems' (arXiv:2512.08296v2)."
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
mas_optimizer = "mas_optimizer.register"

[tool.setuptools]
packages = ["mas_optimizer"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
mas_optimizer = ["configs/*.yml", "configs/*.yaml"]

[tool.uv]
config-settings = { editable_mode = "compat" }
