[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "nat_helpers"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[redis,mcp,langchain,phoenix]==1.6.0-dev",
  "httpx>=0.28",
  "markitdown[all]",
  "tiktoken>=0.5.0",
]
requires-python = ">=3.11,<3.14"
description = "Shared helper library for NeMo Agent Toolkit functions"
classifiers = ["Programming Language :: Python"]

[tool.setuptools]
packages = ["nat_helpers"]
package-dir = {"" = "src"}

[tool.uv]
config-settings = { editable_mode = "compat" }
