[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "nat_helpers"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[redis,mcp,langchain,phoenix]==1.7.0",
  "fastapi>=0.115,<1",
  "httpx>=0.28",
  "httpcore>=1.0,<2",
  "openai>=1.0",
  "pydantic>=2,<2.14",
  "redis>=4.3.6,<6",
]
requires-python = ">=3.11,<3.14"
description = "Shared helper library for NeMo Agent Toolkit functions"
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
nat_helpers = "nat_helpers.register"

[tool.setuptools]
packages = ["nat_helpers"]
package-dir = {"" = "src"}

[tool.uv]
config-settings = { editable_mode = "compat" }
