[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "nat_nv_ingest"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[redis,mcp,langchain,phoenix]==1.7.0",
  "azure-storage-blob",
  # Keep the client and API paired. The client imports nv_ingest_api at
  # runtime even though its wheel metadata doesn't declare that dependency.
  # In 26.3.0, moviepy moved behind the API package's test extra, which lets
  # the production runtime use a security-fixed Pillow release.
  "nv-ingest-api==26.3.0",
  "nv-ingest-client==26.3.0",
  "milvus-lite",
  "minio",
  "nat_helpers",
  "pydantic>=2,<2.14",
  "pymilvus>=2.5.0",
  "pymilvus.model~=0.3.2",
  "redis>=4.3.6,<6",
  "smart_milvus",
  "urllib3>=2.7,<3",
]
requires-python = ">=3.11,<3.14"
description = "Custom NeMo Agent Toolkit Workflow"
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
nat_nv_ingest = "nat_nv_ingest.register"

[tool.setuptools]
packages = ["nat_nv_ingest"]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
nat_nv_ingest = ["configs/*.yml", "configs/*.yaml"]

[tool.uv]
config-settings = { editable_mode = "compat" }
