[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "perplexity_search"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[redis,mcp,langchain,phoenix]==1.7.0",
  "httpx>=0.28",
  "pydantic>=2,<2.14",
]
requires-python = ">=3.11,<3.14"
description = "NeMo Agent Toolkit function for Perplexity Search API web results"
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
perplexity_search = "perplexity_search.register"

[tool.setuptools]
packages = ["perplexity_search"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
perplexity_search = ["configs/*.yml", "configs/*.yaml"]

[tool.uv]
config-settings = { editable_mode = "compat" }
