[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "rss_feed"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[redis,mcp,langchain,phoenix]==1.6.0-dev",
  "fastfeedparser~=0.4.4",
  "httpx>=0.28",
  "cachetools>=6.2.1",
  "markitdown[all]",
  "tiktoken>=0.5.0",
]
requires-python = ">=3.11,<3.14"
description = "RSS Feed function for NeMo Agent Toolkit with reranking support"
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
rss_feed = "rss_feed.register"

[tool.setuptools]
packages = ["rss_feed"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
rss_feed = ["configs/*.yml", "configs/*.yaml"]

[tool.uv]
config-settings = { editable_mode = "compat" }
