[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "serpapi_ai"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[all] @ git+https://github.com/NVIDIA/NeMo-Agent-Toolkit.git@develop",
  "serpapi>=0.1.5",
]
requires-python = ">=3.11,<3.14"
description = "Google AI Mode search integration for NeMo Agent Toolkit using SerpAPI"
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
serpapi_ai = "serpapi_ai.register"

[tool.setuptools]
packages = ["serpapi_ai"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
serpapi_ai = ["configs/*.yml", "configs/*.yaml"]

[tool.uv]
config-settings = { editable_mode = "compat" }
