[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "serpapi_search"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[all]@git+https://github.com/NVIDIA/NeMo-Agent-Toolkit.git@v1.3.0-rc2",
  "serpapi>=0.1.5",
  "httpx>=0.27",
  "markitdown[all]",
  "tiktoken>=0.5.0",
]
requires-python = ">=3.11,<3.14"
description = "Google Search integration for NeMo Agent Toolkit using SerpAPI"
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
serpapi_search = "serpapi_search.register"

[tool.setuptools]
packages = ["serpapi_search"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
serpapi_search = ["configs/*.yml", "configs/*.yaml"]

[tool.uv]
config-settings = { editable_mode = "compat" }
