[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "serpapi_search"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[redis,mcp,langchain,phoenix,async_endpoints]==1.6.0-dev",
  "httpx>=0.28",
]
requires-python = ">=3.11,<3.14"
description = "NeMo Agent Toolkit function for structured SerpAPI search with rich rendering"
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
serpapi_search = "serpapi_search.register"

[tool.setuptools]
packages = ["serpapi_search"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
serpapi_search = ["configs/*.yml", "configs/*.yaml"]

[tool.uv]
config-settings = { editable_mode = "compat" }
