[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "smart_milvus"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[all] @ git+https://github.com/NVIDIA/NeMo-Agent-Toolkit.git@caa95bbcf0a8d0935e22923725c915d8c37e944b",
  "pymilvus~=2.4",
  "requests>=2.31.0",
]
requires-python = ">=3.11,<3.14"
description = "Custom NeMo Agent Toolkit Workflow"
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
smart_milvus = "smart_milvus.register"

[tool.setuptools]
packages = ["smart_milvus"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
smart_milvus = ["configs/*.yml", "configs/*.yaml"]

[tool.uv]
config-settings = { editable_mode = "compat" }
