[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "visual_media"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[redis,mcp,langchain,phoenix,async_endpoints]==1.7.0",
  "httpx>=0.28",
  "redis~=4.3.6"
]
requires-python = ">=3.11,<3.14"
description = "Custom NeMo Agent Toolkit Workflow"
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
visual_media = "visual_media.register"

[tool.setuptools]
packages = ["visual_media"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
visual_media = ["configs/*.yml", "configs/*.yaml"]

[tool.uv]
config-settings = { editable_mode = "compat" }
