[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "vtt_interpreter"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[redis,mcp,langchain,phoenix,async_endpoints]==1.6.0",
  "redis~=4.3.6"
]
requires-python = ">=3.11,<3.14"
description = "VTT transcript interpreter function for NeMo Agent Toolkit that converts meeting transcripts into structured notes"
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
vtt_interpreter = "vtt_interpreter.register"

[tool.setuptools]
packages = ["vtt_interpreter"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
vtt_interpreter = ["configs/*.yml", "configs/*.yaml"]

[tool.uv]
config-settings = { editable_mode = "compat" }
