[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "weather"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[all] @ git+https://github.com/NVIDIA/NeMo-Agent-Toolkit.git@caa95bbcf0a8d0935e22923725c915d8c37e944b",
  "httpx>=0.27",
]
requires-python = ">=3.11,<3.14"
description = "Custom NeMo Agent Toolkit Workflow"
classifiers = ["Programming Language :: Python"]



[project.entry-points.'nat.components']
weather = "weather.register"

[tool.setuptools]
packages = ["weather"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
weather = ["configs/*.yml", "configs/*.yaml"]

[tool.uv]
config-settings = { editable_mode = "compat" }
