[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "wheel"]

[project]
name = "webscrape"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[all]@git+https://github.com/NVIDIA/NeMo-Agent-Toolkit.git@v1.3.1",
  "httpx>=0.27",
  "markitdown[all]",
  "tiktoken>=0.5.0",
]
requires-python = ">=3.11,<3.14"
description = "Custom NeMo Agent Toolkit Workflow"
classifiers = ["Programming Language :: Python"]



[project.entry-points.'nat.components']
webscrape = "webscrape.register"

[tool.setuptools]
packages = ["webscrape"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
webscrape = ["configs/*.yml", "configs/*.yaml"]

[tool.uv]
config-settings = { editable_mode = "compat" }
